<resources>
    <string name="app_name">Hanium</string>
    <string name="login_id">Email</string>
    <string name="login_password">Password</string>
    <string name="login_password_check">Password check</string>
    <string name="login_activity_title">Login</string>

    <string name="auto_login">Auto login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_comment">Thank you for coming back.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_comment">Thank you for visiting</string>
    <string name="log_in">Login</string>

    <string name="ask_find_password">Forget your password? <u><b>find password</b></u></string>
    <string name="ask_sign_up">Are not you a memeber yet? <u><b>sign up</b></u></string>
    <string name="double_check">verify</string>
    <string name="user_name">name</string>
    <string name="user_department">소속</string>
    <string name="login_err">로그인 에러</string>
    <string name="login_err_message">아이디와 비밀번호가 일치하지 않습니다.</string>
    <string name="confirm">확인</string>
    <string name="logout">로그아웃</string>
    <string name="email">E-mail</string>
    <string name="password">비밀번호</string>
    <string name="password_check">Confirm</string>
    <string name="Authentication">Authentication</string>
    <string name="change">변경</string>
    <string name="change_confirm">수정 완료</string>
    <string name="phone">Phone number</string>

    <string name="reset">Reset</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="changeAccountInfo">개인정보 변경</string>

    <string name="find_password_inform">The authentication number will be sent to your email address.<br>The  number is valid for 10 minutes.</br></string>
    <string name="send_email">Send Email</string>
    <string name="find_password">FIND PASSWORD</string>
    <string name="friend">친구</string>
    <string name="korea">korea</string>
    <string name="start_comment">Whoever,Anywhere,<br>Whenever</br></string>

    <!-- home fragment   -->
    <string name="meet_start">미팅 시작</string>
    <string name="meet_reservation">미팅 예약</string>
    <string name="meet_comment">안녕하세요, 도윤 님!</string>

    <!-- change password -->
    <string name="changePassword">비밀번호 변경</string>
    <string name="newPassword">새 비밀번호</string>
    <string name="newPasswordCheck">새 비밀번호 확인</string>
    <string name="currentPassword">현재 비밀번호</string>

    <!--reservation -->
    <string name="date_and_time">날짜 및 시간 설정</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="add_friends">미팅 참가자 추가</string>
    <string name="add_by_email">이메일로 추가</string>
    <string name="input_email">이메일 입력</string>
    <string name="add_by_friendslist">친구 목록에서 추가</string>
    <string name="search_by_name">이름으로 검색</string>
    <string name="meet_name">미팅 이름 설정</string>
    <string name="input_meet_name">미팅 이름 입력</string>


    <!-- find password verify -->
    <string name="findPasswordAuthentication">Authentication</string>
    <string name="verify">Verify</string>
    <string name="verifyText">Authentication is complete.</string>

    <!-- my page -->
    <string name="profile">프로필 정보</string>
    <string name="profileLanguageText">언어</string>
    <string name="profileLanguage">한국어</string>
    <string name="profileNameText">이름</string>
    <string name="profileName">이도윤</string>
    <string name="profileEmailText">이메일</string>
    <string name="profileEmail">doyun7433@naver.com</string>
    <string name="profilePhoneText">전화번호</string>
    <string name="profilePhone">+8210-4217-7433</string>
    <string name="withdrawal">회원탈퇴</string>

    <!-- setting -->
    <string name="setting">설정</string>
    <string name="notification">푸시 알림</string>
    <string name="sound">소리</string>

    <!--char_drawer-->
    <string name="chat_info">미팅룸 정보</string>
    <string name="chat_name_setting">미팅 이름 설정</string>
    <string name="chat_participant">참가자</string>
    <string name="chat_participant_add">미팅 참가자 리스트</string>
    <string name="title_activity_maps">Map</string>

    <!--message-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="fcm_message">FCM Message</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>

    <string name="log_token">Log Token</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
