<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.ResetPasswordActivity"
    android:background="@color/everygreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:text="@string/reset_password"
                android:textColor="@color/purple_light"
                android:textSize="35dp"
                android:fontFamily="@font/wemakebold"/>


            <EditText
                android:id="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_border_white"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="15dp"
                android:elevation="3dp"
                android:fontFamily="@font/wemakeregular"
                android:hint="@string/login_password"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|textPassword"
                android:textColorHint="@color/purple"
                android:textColor="@color/purple_light"
                android:textSize="15sp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/resetPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_border_white"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/ic_confirm"
                android:drawablePadding="15dp"
                android:elevation="3dp"
                android:fontFamily="@font/wemakeregular"
                android:hint="@string/password_check"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|textPassword"
                android:textColorHint="@color/purple"
                android:textColor="@color/purple_light"
                android:textSize="15sp"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/resetPasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background_purple"
                android:fontFamily="@font/wemakebold"
                android:text="@string/reset"
                android:textColor="@color/purple_light"
                android:textAllCaps="false"
                android:textSize="25dp">
            </Button>

        </LinearLayout>
    </ScrollView>


</LinearLayout>