<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.MypageActivity"
        android:background="@color/everygreen">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/backToMainBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="top"
                android:background="@color/everygreen"
                android:drawableLeft="@drawable/ic_back" />

            <Button
                android:id="@+id/settingBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/everygreen"
                android:drawableRight="@drawable/ic_setting" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp">

            <ImageView
                android:id="@+id/profileLogo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/logo"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/wemakebold"
                android:text="@string/profile"
                android:textColor="@color/purple_light"
                android:layout_toRightOf="@+id/profileLogo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textSize="30dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_round_background_purple"
                android:baselineAligned="false"
                android:src="@drawable/ic_person" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profileLanguageIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_global" />

                <TextView
                    android:id="@+id/profileLanguageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/profileLanguageIcon"
                    android:fontFamily="@font/wemakebold"
                    android:text="@string/profileLanguageText"
                    android:textColor="@color/purple"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileLanguageText"
                    android:layout_toRightOf="@+id/profileLanguageIcon"
                    android:fontFamily="@font/wemakebold"
                    android:text="@string/profileLanguage"
                    android:textColor="@color/purple_light"
                    android:textSize="18dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/purple_light" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profileNameIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:id="@+id/profileNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/profileNameIcon"
                    android:fontFamily="@font/wemakebold"
                    android:text="@string/profileNameText"
                    android:textColor="@color/purple"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileNameText"
                    android:layout_toRightOf="@+id/profileNameIcon"
                    android:fontFamily="@font/wemakebold"
                    android:text="@string/profileName"
                    android:textColor="@color/purple_light"
                    android:textSize="18dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/purple_light" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profileEmailIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/profileEmailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/profileEmailIcon"
                    android:fontFamily="@font/wemakebold"
                    android:text="@string/profileEmailText"
                    android:textColor="@color/purple"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileEmailText"
                    android:layout_toRightOf="@+id/profileEmailIcon"
                    android:fontFamily="@font/wemakebold"
                    android:text="@string/profileEmail"
                    android:textColor="@color/purple_light"
                    android:textSize="18dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/purple_light" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profilePhoneIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_global" />

                <TextView
                    android:id="@+id/profilePhoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/profilePhoneIcon"
                    android:fontFamily="@font/wemakebold"
                    android:text="@string/profilePhoneText"
                    android:textColor="@color/purple"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profilePhoneText"
                    android:layout_toRightOf="@+id/profilePhoneIcon"
                    android:fontFamily="@font/wemakebold"
                    android:text="8210-1234-5678"
                    android:textColor="@color/purple_light"
                    android:textSize="18dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/purple_light" />

            <Button
                android:id="@+id/ProfileBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_purple"
                android:fontFamily="@font/wemakebold"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/purple_light"
                android:textSize="20dp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="40dp">

            <Button
                android:id="@+id/toWithdrawalBtn"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/everygreen"
                android:fontFamily="@font/wemakebold"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/withdrawal"
                android:textColor="@color/purple_light"
                android:textSize="10dp" />

            <Button
                android:id="@+id/toChangePasswordBtn"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/everygreen"
                android:fontFamily="@font/wemakebold"
                android:layout_centerInParent="true"
                android:text="@string/changePassword"
                android:textColor="@color/purple_light"
                android:textSize="10dp" />

            <Button
                android:id="@+id/toLogoutBtn"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/everygreen"
                android:fontFamily="@font/wemakebold"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/logout"
                android:textColor="@color/purple_light"
                android:textSize="10dp" />
        </RelativeLayout>


    </LinearLayout>

</layout>