<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/everygreen"
    android:orientation="vertical"
    tools:context=".ui.auth.FindPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/wemakebold"
                android:text="@string/find_password"
                android:textColor="@color/purple_light"
                android:textSize="40dp" />


            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_border_white"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:elevation="3dp"
                android:fontFamily="@font/wemakeregular"
                android:hint="doyun7433@naver.com"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:textColorHint="@color/purple_light"
                android:textSize="15sp"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/findPasswordAuthentication"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="1dp"
                    android:layout_weight=".70"
                    android:background="@drawable/bg_border_white"
                    android:cursorVisible="true"
                    android:drawableLeft="@drawable/ic_authentication"
                    android:drawablePadding="15dp"
                    android:elevation="3dp"
                    android:fontFamily="@font/wemakeregular"
                    android:hint="@string/findPasswordAuthentication"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions"
                    android:textColorHint="@color/purple"
                    android:textColor="@color/purple_light"
                    android:textSize="15sp"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/findPasswordVerify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight=".20"
                    android:background="@drawable/btn_purple"
                    android:fontFamily="@font/wemakeregular"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingHorizontal="1dp"
                    android:paddingVertical="10dp"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@color/purple_light" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="120dp"
                android:fontFamily="@font/wemakebold"
                android:text="@string/verifyText"
                android:textColor="@color/purple"
                android:textSize="13dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>