<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.everytranslation.ui.navigation.home.HomeViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/everygreen"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        tools:context=".ui.navigation.home.HomeFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/meet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/wemakebold"
            android:text="@string/meet_comment"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <Button
            android:id="@+id/meetStart"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:text="@string/meet_start"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/wemakebold"
            android:background="@drawable/radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/meetReservation"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/wemakebold"
            android:background="@drawable/radius"
            android:layout_marginBottom="30dp"
            android:text="@string/meet_reservation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:theme="@style/CalenderViewCustom"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4">

        </CalendarView>

    </LinearLayout>
</layout>